generated-tests/tests/snapshots/ts/test_generated_call_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
testFn(a2, b2)

AST:
(program
  (expression_statement
    (call_expression
      (identifier testFn)
      (arguments
        (identifier a2)
        (identifier b2)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "testFn(a2, b2)",
            kind: CallExpression,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 15,
            },
        },
        Usage {
            name: "testFn",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
        Usage {
            name: "a2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 8,
                end_line: 1,
                end_column: 10,
            },
        },
        Usage {
            name: "b2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 12,
                end_line: 1,
                end_column: 14,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
