generated-tests/tests/snapshots/ts/test_generated_class_declaration.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
class TestClass1 { private field: number = 42; public method1(): number { return this.field; } }

AST:
(program
  (class_declaration
    (type_identifier)
    (class_body
      (public_field_definition
        (accessibility_modifier)
        (property_identifier)
        (type_annotation
          (predefined_type)
        )
        (number)
      )
      (method_definition
        (accessibility_modifier)
        (property_identifier)
        (formal_parameters)
        (type_annotation
          (predefined_type)
        )
        (statement_block
          (return_statement
            (member_expression
              (this)
              (property_identifier)
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestClass1",
            line_number: 1,
            definition_type: ClassDefinition,
            scope: Some(
                "TestClass1",
            ),
        },
        Definition {
            name: "field",
            line_number: 1,
            definition_type: PropertyDefinition,
            scope: Some(
                "TestClass1",
            ),
        },
        Definition {
            name: "method1",
            line_number: 1,
            definition_type: MethodDefinition,
            scope: Some(
                "TestClass1",
            ),
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "field",
            kind: FieldExpression,
            scope: Some(
                "TestClass1",
            ),
            start_line: 1,
            start_column: 28,
            end_line: 1,
            end_column: 33,
        },
        SerializableUsage {
            name: "method1",
            kind: FieldExpression,
            scope: Some(
                "TestClass1",
            ),
            start_line: 1,
            start_column: 55,
            end_line: 1,
            end_column: 62,
        },
        SerializableUsage {
            name: "field",
            kind: FieldExpression,
            scope: Some(
                "TestClass1",
            ),
            start_line: 1,
            start_column: 87,
            end_line: 1,
            end_column: 92,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
