generated-tests/tests/snapshots/ts/test_generated_do_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
let i = 0; do { i++; } while (i < 5);

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "i")
      value: (number "0")
    )
  )
  (do_statement
    body: (statement_block
      (expression_statement
        (update_expression
          argument: (identifier "i")
        )
      )
    )
    condition: (parenthesized_expression
      (binary_expression
        left: (identifier "i")
        right: (number "5")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "i",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 6,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "i",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 18,
            },
        },
        Usage {
            name: "i",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 31,
                end_line: 1,
                end_column: 32,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
