generated-tests/tests/snapshots/ts/test_generated_enum_declaration.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
enum TestEnum { A, B }

AST:
(program
  (enum_declaration
    name: (identifier "TestEnum")
    body: (enum_body
      name: (property_identifier "A")
      name: (property_identifier "B")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "TestEnum",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 14,
            },
        },
        Usage {
            name: "A",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 18,
            },
        },
        Usage {
            name: "B",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 20,
                end_line: 1,
                end_column: 21,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
