generated-tests/tests/snapshots/ts/test_generated_existential_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const val: * = 42;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier val)
      (type_annotation
        (existential_type)
      )
      (number)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "val",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 10,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
